--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@ header {
 }
 /* Main Content */
 main {
-    background-color: rgb(0, 255, 255);
+    background-color: teal;
 }
 /* Footer */
 footer {
