navigation bar added to header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@ header {
 }
 /* Main Content */
 main {
-    background-color: teal;
+    background-color: rgb(35, 77, 77);
 }
 /* Footer */
 footer {
