--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,19 +1,14 @@
-/* Asterisk wildcard selector to override default styles by the browser */
-* {
-    padding: 0%;
-    margin: 0%;
-    box-sizing: border-box;
-}
+/*Asterisk wildcard selector to override deafult styles by the browser*/
 
-/* Header */
+/*Header*/
 header {
-    background-color: rgb(51, 255, 0);
+    background-color: rgb(37, 132, 209);
 }
-/* Main Content */
+/*Main content*/
 main {
-    background-color: rgb(35, 77, 77);
+    background-color: teal;
 }
-/* Footer */
+/*Footer*/
 footer {
-    background-color: rgba(255, 166, 0, 0.979);
+    background-color: orange;
 }
