--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,28 @@
 /*Asterisk wildcard selector to override deafult styles by the browser*/
+* {
+    padding: 0%;
+    margin: 0%;
+    box-sizing: border-box;
+}
+
+/*General Styles*/
+body {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    /*Generic project styles*/
+    color: #3a3a3a;
+}
 
 /*Header*/
 header {
-    background-color: rgb(37, 132, 209);
+    background-color: rgb(37, 209, 109);
 }
 /*Main content*/
 main {
-    background-color: teal;
+    background-color: rgb(112, 207, 207);
+    /*Make main element take up surplus space to push footer down*/
+    flex: 1 0 auto;
 }
 /*Footer*/
 footer {
