--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,6 +23,10 @@ body {
 header {
     background-color: rgb(37, 209, 109);
 }
+h1 {
+    font-family: 'Oswald', sans-serif;
+}
+
 /*Main content*/
 main {
     background-color: rgb(112, 207, 207);
