format nav element

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,8 +28,26 @@ header {
     width: 100%;
     box-shadow: 0 2px 2px #3a3a3a;
 }
+
+header a {
+    text-decoration: none;
+    color: inherit;
+}
+
 h1 {
     font-family: 'Oswald', sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    color: rgb(57, 7, 78);
+    text-align: center;
+}
+
+#menu {
+    font-size: 110%;
+    letter-spacing: 2px;
+    word-spacing: 1cm;
+    text-align: center;
+    color: rgb(5, 4, 68);
 }
 
 /*Main content*/
