--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,6 +48,11 @@ h1 {
     word-spacing: 1cm;
     text-align: center;
     color: rgb(5, 4, 68);
+   
+}
+
+.active {
+    border-bottom: 1px solid #3a3a3a;
 }
 
 /*Main content*/
