--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,10 +52,21 @@ h1 {
 #menu > li {
     margin-bottom: 1em;}
 
-    
+
 .active {
     border-bottom: 1px solid #3a3a3a;
 }
+nav {
+    position: absolute;
+    background-color: rgb(37, 209, 109);
+    width: 100%;
+    left: 0;
+    padding: 0 1rem;
+    box-shadow: 0 2px 2px #3a3a3a;
+    display: none;
+    top: 100%;
+}
+
 
 /*Main content*/
 main {
