add functionality to nav

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,9 +67,9 @@ nav {
     padding: 0 1rem;
     box-shadow: 0 2px 2px #3a3a3a;
     display: none;
-    top: 100%;
-}
-/* Nav toggle */
+    top: 100%;}
+
+    /* Nav toggle */
 #nav-toggle:checked~nav {
     display: block;
 }
@@ -82,11 +82,13 @@ nav {
     font-size: 2rem;
 }
 
+
 /*Main content*/
 main {
     background-color: rgb(112, 207, 207);
     /*Make main element take up surplus space to push footer down*/
     flex: 1 0 auto;
+    margin-top: 48px;
 }
 /*Footer*/
 footer {
