--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,6 +30,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: baseline;
+    margin-top: 0%;
 }
 
 header a {
