--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,7 +30,7 @@ h1, h2, h3 {
 /*Header*/
 header {
     background-color: rgb(37, 209, 109);
-    padding: 2 2rem;
+    padding: 2 2em;
     position: fixed;
     z-index: 99;
     width: 100%;
@@ -117,6 +117,29 @@ main {
 #cover-text > h3 {
     color: #19deec;
     text-transform: initial;
+}
+
+#reasons h2 {
+    margin-bottom: 20px;
+    text-align: center;
+    font-size: 280%;
+}
+
+#about-us > div,
+#accommodation > div {
+    line-height: 20px;
+    margin-bottom: 20px;
+}
+
+#about-us p {
+    padding: 0 20px;
+}
+
+#location > hr,
+#activities> hr,
+#accomodation> hr {
+    border-top: 1px solid #280872;
+    margin: 5px 0;
 }
 
 /*Footer*/
