--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,9 @@ body {
     font-family: 'Open Sans', sans-serif;
 }
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
     font-family: 'Oswald', sans-serif;
     text-transform: uppercase;
     letter-spacing: 2px;
@@ -94,6 +96,7 @@ main {
     flex: 1 0 auto;
     margin-top: 120px;
 }
+
 /*Welcome photo section*/
 #welcome {
     height: 600px;
@@ -104,29 +107,24 @@ main {
 
 #cover-text {
     /* Final rgba value sets the opacity so it is semi-transparent */
-    background-color: rgba(221, 241, 107, 0.4);
+    background-color: rgba(0, 51, 0, 0.6);
     font-size: 130%;
     position: absolute;
     bottom: 20px;
     width: 80%;
     min-height: 200px;
     padding-top: 20px;
-    padding-left: 10px;;
+    padding-left: 10px;
+    ;
 }
 
-#cover-text > h3 {
-    color: #19deec;
+#cover-text>h3 {
+    color: #12d812;
     text-transform: initial;
 }
 
-#reasons h2 {
-    margin-bottom: 20px;
-    text-align: center;
-    font-size: 280%;
-}
-
-#about-us > div,
-#accommodation > div {
+#about-us>div,
+#accommodation>div {
     line-height: 20px;
     margin-bottom: 20px;
 }
@@ -135,11 +133,28 @@ main {
     padding: 0 20px;
 }
 
-#location > hr,
-#activities> hr,
-#accomodation> hr {
+#location>hr,
+#activities>hr,
+#accommodation>hr {
     border-top: 1px solid #280872;
     margin: 5px 0;
+}
+
+#ducks-in-pond {
+    background: url('../Images/home/about-us-image.webp') no-repeat top center / cover;
+    height: 90vw;
+    width: 90vw;
+    margin-bottom: 20px;
+    /* Makes the square image into a circle */
+    border-radius: 50%;
+    max-width: 300px;
+    max-height: 300px;
+}
+
+#about-us-image {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 /*Footer*/
@@ -150,6 +165,7 @@ main {
     justify-content: space-evenly;
     list-style-type: none;
 }
+
 #social-networks i {
     font-size: 160%;
     padding: 5%;
@@ -198,12 +214,32 @@ main {
         /* Push main content down below larger header */
         margin-top: 79px;
     }
- /* Welcome image */
- #cover-text {
-    width: 200px;
-    right: 30px;
-  
-}
+
+    /* Welcome image */
+    #cover-text {
+        width: 200px;
+        right: 30px;
+
+    }
+
+    /* Reasons section */
+    #about-us,
+    #accommodation {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+    }
+
+    #standard-cottage p,
+    #family-cottage p {
+    text-align: center;
+    }
+
+    #standard-cottage ul,
+    #family-cottage ul {
+    text-align: center;
+    list-style-type: none;
+    }
 
 }
 
