--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -188,6 +188,15 @@ main {
     text-align: right;
 }
 
+/* Media query: large or landscape phones (576px and up) */
+@media screen and (min-width: 576px) {
+    #photos {
+        column-count: 2;
+        column-gap: 0;
+    }
+}
+
+
 /* Media query: tablets and larger (768px and up) */
 @media screen and (min-width: 768px) {
 
@@ -253,11 +262,21 @@ main {
     list-style-type: none;
     }
 
+     /* Gallery */
+     #photos {
+        column-count: 3;
+    }
+
 }
 
 /* Large devices (laptops and desktops, 992px and up) */
 @media screen and (min-width: 992px) {
     #menu a:hover {
         border-bottom: 1px solid #3a3a3a;
+    }
+
+     /* Gallery */
+     #photos {
+        column-count: 4;
     }
 }
