--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -193,6 +193,7 @@ main {
     background-position: 75%;
     padding: 20px 10% 0 10%;
     flex-grow: 1;
+    margin-bottom: 20px;
 }
 
 #contact p {
@@ -202,19 +203,20 @@ main {
     text-align: center;
     line-height: 1.5;
 }
+
 .radio-buttons {
     width: 100%;
     display: flex;
     justify-content: space-between;
 }
 
-.text-input {
+input [type=text] {
     color: #fafafa;
-    width: 100%;
-    margin: 5px 0 20px 0;
+    width: 50%;
+    margin: 8px 0 ;
     border: 1px solid #fafafa;
     border-radius: 2px;
-    padding: 0 5px;
+    padding: 12px 12px;
 }
 
 
@@ -295,6 +297,28 @@ main {
     /* Gallery */
     #photos {
         column-count: 3;
+    }
+
+    /* Contact section */
+    #contact-form {
+        background-position: center;
+        position: relative;
+    }
+
+    #signup-form {
+        max-width: 400px;
+        position: absolute;
+        left: 10%;
+        top: 150px;
+    }
+
+    .text-input:hover {
+        border-color: #f16c6b;
+    }
+
+    .join-button:hover {
+        background-color: #fafafa;
+        color: #86bd78;
     }
 
 }
