--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -203,12 +203,23 @@ main {
     text-align: center;
     line-height: 1.5;
 }
+#input-form label{
+    color: rgb(10, 10, 112);
+    padding: 3px 6px;
+}
+
+
+input {
+    margin: 0.4rem;
+    font-weight: 200;
+}
 
 .radio-buttons {
     width: 100%;
     display: flex;
     justify-content: space-between;
 }
+
 
 input [type=text] {
     color: #fafafa;
@@ -217,6 +228,7 @@ input [type=text] {
     border: 1px solid #fafafa;
     border-radius: 2px;
     padding: 12px 12px;
+    align-items: center;
 }
 
 
@@ -301,10 +313,9 @@ input [type=text] {
 
     /* Contact section */
     #contact-form {
-        background-position: center;
-        position: relative;
+        align-content: center;
     }
-
+    
     #signup-form {
         max-width: 400px;
         position: absolute;
